[gd_scene format=3 uid="uid://dssoxo8ue5gtn"]

[ext_resource type="PackedScene" uid="uid://do45g6f1npwm3" path="res://Blender/Fn Fal.blend" id="1_vcjcl"]
[ext_resource type="Script" uid="uid://do7uh35bc71du" path="res://Scripts/gun_script.gd" id="2_cgbnk"]

[sub_resource type="Animation" id="Animation_mg0rm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_cgbnk"]
resource_name = "ads"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.187, 0.045, 0.1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mg0rm"]
_data = {
&"RESET": SubResource("Animation_mg0rm"),
&"ads": SubResource("Animation_cgbnk")
}

[node name="Fn Fal" unique_id=62793824 instance=ExtResource("1_vcjcl")]
script = ExtResource("2_cgbnk")
canShoot = false
weaponName = "a"
magazineSize = 20
reserveAmmo = 200
automatic = true
fireRate = 0.1
damage = 1.0
speed = 0.5
trailColour = Color(0.7058824, 0.35686275, 0.7058824, 1)
timeToDespawn = 3.0
vRecoil = 0.1
hRecoil = 0.1
gunSound = 1

[node name="Skeleton3D" parent="Armature" parent_id_path=PackedInt32Array(1291321878) index="0" unique_id=572781784]
bones/1/position = Vector3(0.11998208, 0.030131474, 2.9310383e-08)
bones/2/rotation = Quaternion(3.552714e-15, -1.1920928e-07, 4.235165e-22, 1)

[node name="end_of_barrel" type="Node3D" parent="Armature/Skeleton3D/a" parent_id_path=PackedInt32Array(1946752139) index="0" unique_id=509464055]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.014427567, -1.0697801)

[node name="end_of_barrel_look_at" type="Node3D" parent="Armature/Skeleton3D/a" parent_id_path=PackedInt32Array(1946752139) index="1" unique_id=809408323]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.014427567, -2.06978)

[node name="gun_audio" type="AudioStreamPlayer3D" parent="." index="3" unique_id=1379885928]

[node name="ads" type="AnimationPlayer" parent="." index="4" unique_id=431378872]
libraries/ = SubResource("AnimationLibrary_mg0rm")
